# zephyr-l2cap

./: .gitignore  CMakeLists.txt  README.md  envsetup.sh  prj.conf
src/: main.c
